--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,24 +1,18 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.jakewharton.hugo'
-
-//获取时间戳
-def getDate() {
-    def date = new Date()
-    def formattedDate = date.format('yyyyMMddHHmm')
-    return formattedDate
-}
+//apply plugin: 'com.antfortune.freeline'
 
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "com.cpxiao.infiniteloop.free"
+        applicationId "com.cpxiao.infiniteloop"
 
         minSdkVersion 9
         targetSdkVersion 23
-        versionCode 105
-        versionName "1.0.5"
+        versionCode 106
+        versionName "1.0.6"
     }
     buildTypes {
         release {
@@ -30,14 +24,15 @@ android {
 
     //友盟多渠道打包
     productFlavors {
-        googleplay {}
-        anzhi {}
-        youmi {}
-        wandoujia{}
-        productFlavors.all {
-            flavor -> flavor.manifestPlaceholders = [UMENG_CHANNEL_VALUE: name]
-        }
+        gp {}
     }
+    productFlavors.all {
+//        flavor -> flavor.manifestPlaceholders = [UMENG_CHANNEL_VALUE: name]
+    }
+//    freeline {
+//        hack true
+//        productFlavor 'gp'
+//    }
 
     //修改生成的apk名字
     applicationVariants.all { variant ->
@@ -48,14 +43,14 @@ android {
                 def releaseApkName = packageName +
                         "_v" + defaultConfig.versionName +
                         "_" + variant.productFlavors[0].name +
-                        "_" + getDate() + '.apk'
+                        "_" + new Date().format('yyyyMMddHHmm') + '.apk'
                 output.outputFile = new File(oldFile.parent, releaseApkName)
             }
             if (variant.buildType.name.equals('beta')) {
                 def baseApkName = packageName +
                         "_v" + defaultConfig.versionName + "beta" +
                         "_" + variant.productFlavors[0].name +
-                        "_" + getDate() + '.apk'
+                        "_" + new Date().format('yyyyMMddHHmm') + '.apk'
                 output.outputFile = new File(oldFile.parent, baseApkName)
             }
             if (variant.buildType.name.equals('debug')) {
@@ -72,7 +67,6 @@ dependencies {
     compile project(':AndroidUtils:library')
 //    compile project(':AndroidMiniGame:library')
 
-
     //友盟统计 start
     compile 'com.umeng.analytics:analytics:5.6.7'
     //友盟统计 end
@@ -82,4 +76,8 @@ dependencies {
     //Facebook广告 end
 
     compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    compile 'com.google.firebase:firebase-ads:9.4.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
