--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,18 @@
 <manifest package="com.cpxiao.infiniteloop"
           xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!--友盟统计需要权限 start-->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <!--facebook ad start-->
     <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    <!--友盟统计需要权限 end-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <!--facebook ad end-->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/app_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity
             android:name=".activity.HomeActivity"
             android:screenOrientation="portrait">
@@ -29,12 +28,6 @@
             android:name=".activity.GameActivity"
             android:screenOrientation="portrait"/>
 
-        <meta-data
-            android:name="UMENG_APPKEY"
-            android:value="57c3a2dae0f55a7ac60017e3"/>
-        <meta-data
-            android:name="UMENG_CHANNEL"
-            android:value="${UMENG_CHANNEL_VALUE}"/>
     </application>
 
 </manifest>
