--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,15 +4,15 @@ apply plugin: 'com.jakewharton.hugo'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    buildToolsVersion '25.0.2'
 
     defaultConfig {
         applicationId "com.cpxiao.infiniteloop"
 
         minSdkVersion 9
         targetSdkVersion 23
-        versionCode 106
-        versionName "1.0.6"
+        versionCode 110
+        versionName "1.1.0"
     }
     buildTypes {
         release {
@@ -27,7 +27,7 @@ android {
         gp {}
     }
     productFlavors.all {
-//        flavor -> flavor.manifestPlaceholders = [UMENG_CHANNEL_VALUE: name]
+        flavor -> flavor.manifestPlaceholders = [UMENG_CHANNEL_VALUE: name]
     }
 //    freeline {
 //        hack true
@@ -61,23 +61,10 @@ android {
 }
 
 dependencies {
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-
     compile project(':AndroidUtils:library')
-//    compile project(':AndroidMiniGame:library')
-
-    //友盟统计 start
-    compile 'com.umeng.analytics:analytics:5.6.7'
-    //友盟统计 end
-
-    //Facebook广告 start
-    compile files('libs/AudienceNetwork_v4.7.jar')
-    //Facebook广告 end
-
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-
-    compile 'com.google.firebase:firebase-ads:9.4.0'
+    compile project(':gamelib')
+    compile 'com.android.support:appcompat-v7:23.0.1'
+//    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
