--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,12 +8,20 @@
     <!--facebook ad end-->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 
+    <!--友盟统计需要权限 start-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <!--友盟统计需要权限 end-->
+
+
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/app_icon"
+        android:icon="@drawable/app_icon"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
         <activity
             android:name=".activity.HomeActivity"
             android:screenOrientation="portrait">
@@ -27,6 +35,14 @@
         <activity
             android:name=".activity.GameActivity"
             android:screenOrientation="portrait"/>
+
+        <meta-data
+            android:name="UMENG_APPKEY"
+            android:value="593f39b199f0c707d70005f2"/>
+        <meta-data
+            android:name="UMENG_CHANNEL"
+            android:value="${UMENG_CHANNEL_VALUE}" />
+
 
     </application>
 
