--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,16 +4,17 @@ apply plugin: 'com.jakewharton.hugo'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         applicationId "com.cpxiao.infiniteloop"
-
         minSdkVersion 9
         targetSdkVersion 23
         versionCode 112
         versionName "1.1.2"
+        flavorDimensions "channel"
     }
+
     buildTypes {
         release {
             minifyEnabled true //混淆
@@ -26,6 +27,7 @@ android {
     productFlavors {
         gp {}
     }
+
     productFlavors.all {
         flavor -> flavor.manifestPlaceholders = [UMENG_CHANNEL_VALUE: name]
     }
@@ -35,33 +37,42 @@ android {
 //    }
 
     //修改生成的apk名字
-    applicationVariants.all { variant ->
-        variant.outputs.each { output ->
-            def oldFile = output.outputFile
-            def packageName = applicationId;
-            if (variant.buildType.name.equals('release')) {
-                def releaseApkName = packageName +
-                        "_v" + defaultConfig.versionName +
-                        "_" + variant.productFlavors[0].name +
-                        "_" + new Date().format('yyyyMMddHHmm') + '.apk'
-                output.outputFile = new File(oldFile.parent, releaseApkName)
-            }
-            if (variant.buildType.name.equals('beta')) {
-                def baseApkName = packageName +
-                        "_v" + defaultConfig.versionName + "beta" +
-                        "_" + variant.productFlavors[0].name +
-                        "_" + new Date().format('yyyyMMddHHmm') + '.apk'
-                output.outputFile = new File(oldFile.parent, baseApkName)
-            }
-            if (variant.buildType.name.equals('debug')) {
-
-            }
+//    applicationVariants.all { variant ->
+//        variant.outputs.each { output ->
+//            def oldFile = output.outputFile
+//            def packageName = applicationId;
+//            if (variant.buildType.name.equals('release')) {
+//                def releaseApkName = packageName +
+//                        "_v" + defaultConfig.versionName +
+//                        "_" + variant.productFlavors[0].name +
+//                        "_" + new Date().format('yyyyMMddHHmm') + '.apk'
+//                output.outputFile = new File(oldFile.parent, releaseApkName)
+//            }
+//            if (variant.buildType.name.equals('beta')) {
+//                def baseApkName = packageName +
+//                        "_v" + defaultConfig.versionName + "beta" +
+//                        "_" + variant.productFlavors[0].name +
+//                        "_" + new Date().format('yyyyMMddHHmm') + '.apk'
+//                output.outputFile = new File(oldFile.parent, baseApkName)
+//            }
+//            if (variant.buildType.name.equals('debug')) {
+//
+//            }
+//        }
+//    }
+    android.applicationVariants.all {variant->
+        variant.outputs.all{output->
+             outputFileName = applicationId +
+                    "_v" + defaultConfig.versionName +
+                    "_" + variant.productFlavors[0].name +
+                    "_" + new Date().format('yyyyMMddHHmm') + '.apk'
         }
     }
 }
 
 dependencies {
-    compile project(':AndroidUtils:library')
+//    compile project(':AndroidUtils:library')
+    compile project(':__AndroidUtils:library')
 
     compile 'com.android.support:appcompat-v7:25.3.1'
     /**
