--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,13 @@
 include ':app'
 
-include ':AndroidUtils'
-project(':AndroidUtils').projectDir = new File('../AndroidUtils/')
-include ':AndroidUtils:library'
+//include ':AndroidUtils'
+//project(':AndroidUtils').projectDir = new File('../../AndroidUtils/')
+//include ':AndroidUtils:library'
 
-//include ':AndroidMiniGame'
-//project (':AndroidMiniGame').projectDir = new File('../AndroidMiniGame/')
-//include ':AndroidMiniGame:library'
+include ':__AndroidUtils'
+project(':__AndroidUtils').projectDir = new File('../../__AndroidUtils/')
+include ':__AndroidUtils:library'
 
+include ':__MiniGameLib'
+project(':__MiniGameLib').projectDir = new File('../../__MiniGameLib/')
+//include ':__MiniGameLib:app'
